<resources>
    <string name="app_name">Popular Movies</string>
    <string name="latest_movies_text">Latest Movies</string>
    <string name="loading_text">Loading..</string>
    <string name="movie_mania_text">Movie Mania</string>
    <string name="rating_text">%s/10</string>
    <string name="time_text">%s min</string>
    <string name="retry">Retry</string>
    <string name="no_network_connection">Please check your internet connection</string>
    <string name="no_latest_movies_available">No latest movies available</string>
    <string name="pref_movie_list_type_key">popular</string>
    <string name="pref_movie_list_type_default">popular</string>
    <string name="settings">Settings</string>
    <string name="overview_text">Overview</string>
    <string name="rating_label_text">Rating :</string>
    <string name="release_label_text">Release :</string>
    <string name="language_label_text">Language :</string>
    <string name="popularity_label_text">Popularity :</string>
    <string name="vote_label_text">Vote Count :</string>
    <string name="lang_en">en</string>
    <string name="other">Other</string>
    <string name="adult">A</string>
    <string name="under_adult">U/A</string>
    <string name="english_text">English</string>
    <string name="sort_by_title">Sort By</string>
    <string name="api_key_not_given">Please add your api key</string>
    <string name="review_text">Reviews</string>
    <string name="trailers_text">Trailers</string>
    <string name="trailer_text">Trailer %s</string>
    <string-array name="movie_list_type">
        <item>popular</item>
        <item>top_rated</item>
    </string-array>
    <string-array name="movie_list_type_id">
        <item>Most Popular</item>
        <item>Highest Rated</item>
    </string-array>
    <string name="content_authority">com.example.root.popularmovies</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sync_account_type">popularmovies.example.com</string>
</resources>
